[FIX] align vertically the bias regarding to the button

--- a/specific_parts/specific-addons/qoqa_offer/static/src/css/qoqa_offer.css
+++ b/specific_parts/specific-addons/qoqa_offer/static/src/css/qoqa_offer.css
@@ -89,6 +89,11 @@
   height: 28px;
 }
 
+.openerp .oe_kanban_offer .qoqa_middle .qoqa_left_box,
+.openerp .oe_kanban_offer .qoqa_middle .qoqa_right_box {
+  line-height: 20px;
+}
+
 
 .oe_kanban_offer .oe_ellipsis {
   overflow: hidden;
